--- a/term-clock/term-clock.conf
+++ b/term-clock/term-clock.conf
@@ -21,7 +21,7 @@ Animation Pattern = 2
 # Info bar [0-255]. -1 to disable info bar background.
 # [Default -1]
 # [-2 to Infinity for a default colour 129]
-Bar Colour = -1
+Bar Colour = 1
 
 # Info bar text colours
 # This is only available if the `Bar Colour' is set to -1 (disabled)
@@ -30,6 +30,12 @@ Bar Text Animate Colours = 184, 208, 203, 198, 164, 129, 92
 # Animation to the bar text. It's a line, only 1 - 3 are available animations
 # 0 to disable. [Default 1]
 Bar Text Animation Pattern =
+
+# Messages to display [Default: emoji wrapped around appropriate messages]
+Morning Message =
+Afternoon Message =
+Evening Message =
+Night Message =
 
 # Username to display [Default: auto]
 # You can't do anything if you want to display 'auto'
